--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,7 +98,9 @@
     color: rgb(22, 179, 231);
     background-color: transparent;
 }
-/* END OF SECTION TWO */
+/* END OF SECTION THREE */
+
+/* START OF SECTION TWO */
 .sectiontwo{
     height: 80vh;
     width: 100vw;
@@ -134,4 +136,68 @@
     border-radius: 25px;
     background-color: transparent;
     cursor: pointer;
+}
+/* END OF SECTION TWO */
+
+/* START OF SECTION THREE */
+.sectionthree{
+    height: 80vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.90);
+}
+.sectionthree .maindiv{
+    height: 90%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.maindiv .albumDiv{
+    height: 90%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.albumDiv .upperdiv{
+    height: 48%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.upperdiv .one{
+    height: 100%;
+    width: 32%;
+}
+.upperdiv .two{
+    height: 100%;
+    width: 32%;
+}
+.upperdiv .three{
+    height: 100%;
+    width: 32%;
+}
+.albumDiv .lowerdiv{
+    height: 48%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.lowerdiv .one{
+    height: 100%;
+    width: 32%;
+}
+.lowerdiv .two{
+    height: 100%;
+    width: 32%;
+}
+.lowerdiv .three{
+    height: 100%;
+    width: 32%;
 }
