--- a/CSS/style.css
+++ b/CSS/style.css
@@ -225,3 +225,26 @@
     background-size: cover;
     border-radius: 5px;
 }
+.maindiv h1{
+    margin-bottom: 10px;
+    color: rgb(22, 179, 231);
+}
+/* END OF SECTION THREE */
+
+/* START OF SECTION FOUR */
+.sectionfour{
+    height: 80vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.90);
+}
+.sectionfour .maindiv{
+    height: 90%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
