--- a/CSS/style.css
+++ b/CSS/style.css
@@ -233,12 +233,12 @@
 
 /* START OF SECTION FOUR */
 .sectionfour{
-    height: 80vh;
+    height: 50vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.90);
+    background-color: rgba(255, 255, 255, 0.20);
 }
 .sectionfour .maindiv{
     height: 90%;
@@ -246,5 +246,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+}
+.maindiv .people{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.maindiv .photographer1{
+    height: 100%;
+    width: 32%;
+}
+.maindiv .photographer2{
+    height: 100%;
+    width: 32%;
+}
+.maindiv .photographer3{
+    height: 100%;
+    width: 32%;
 }
