--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
 }
 .sectionone{
     height: 75vh;
-    width: 100vw;
+    width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(../Images/background.jpg);
     background-position: center;
     background-size: cover;
@@ -103,7 +103,7 @@
 /* START OF SECTION TWO */
 .sectiontwo{
     height: 80vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -142,7 +142,7 @@
 /* START OF SECTION THREE */
 .sectionthree{
     height: 80vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -234,7 +234,7 @@
 /* START OF SECTION FOUR */
 .sectionfour{
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -280,8 +280,9 @@
 /* Start of section Five */
 .sectionfive{
     height: 50vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.20);
@@ -293,4 +294,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: aquamarine;
+}
+.sectionfive .footer{
+    height: 10%;
+    width: 100%;
+    background-color: rgb(71, 67, 67);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
