--- a/CSS/style.css
+++ b/CSS/style.css
@@ -291,9 +291,9 @@
     height: 90%;
     width: 80%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: aquamarine;
 }
 .sectionfive .footer{
@@ -304,4 +304,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.centerdiv .form{
+    height: 250px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    text-align: start;
+    border: solid 2px blue;
+}
+.centerdiv .contacts{
+    height: 250px;
+    width: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 2px blue;
 }
