--- a/CSS/style.css
+++ b/CSS/style.css
@@ -196,6 +196,7 @@
     background-color: rgb(22, 179, 231);
 }
 .albumDiv p{
+    text-align: center;
     font-size: 35px;
     color: white;
     opacity: 0;
