--- a/CSS/style.css
+++ b/CSS/style.css
@@ -466,5 +466,9 @@ input::placeholder{
     border: solid 1px gray;
     border-radius: 5px;
 }
+.media img{
+    height: 33px;
+    margin-left: 7px;
+}
 /* End of section five */
 /* End of the project */
