Made some important changes to my code

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -367,6 +367,9 @@
 .people p{
     line-height: 1.7;
 }
+.sectionfour .describe{
+    margin-left: -40%;
+}
 /* End of section Four */
 
 /* Start of section Five */
